--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,7 @@ services:
             # If you changed the "port" environment variable, adjust accordingly
             # The number AFTER the colon should match the "port" variable and the number
             # before the colon is the port where you would access the container from outside.
-            - 4567:4567
+            - 3003:3003
         environment:
             # Change if you want to mount the database somewhere else.
             # In this case, you can get rid of the db volume below
@@ -33,7 +33,7 @@ services:
             # site_url="https://www.example.com"   incorrect
             # site_url=https://www.example.com     correct
             # This is important to ensure Chhoto URL outputs the shortened link with the correct URL.
-            # - site_url=https://www.example.com
+            - site_url=https://go.muzhen.org
 
             # If you want to provided hashed password and API Key, uncomment the next line. Read the README
             # for instructions for the hashing. Make sure to escape $ by $$.
@@ -41,9 +41,9 @@ services:
 
             # Change this if you are running Chhoto URL on a port which is not 4567.
             # This is important to ensure Chhoto URL outputs the shortened link with the correct port.
-            # - port=4567
+            - port=3003
             
-            - password=TopSecretPass
+            - password=${PASSWORD}
 
             # This needs to be set in order to use programs that use the JSON interface of Chhoto URL.
             # You will get a warning if this is insecure, and a generated value will be output
