--- a/compose.yaml
+++ b/compose.yaml
@@ -33,7 +33,7 @@ services:
             # site_url="https://www.example.com"   incorrect
             # site_url=https://www.example.com     correct
             # This is important to ensure Chhoto URL outputs the shortened link with the correct URL.
-            - site_url=${PASSWORD}
+            - site_url=${URL}
 
             # If you want to provided hashed password and API Key, uncomment the next line. Read the README
             # for instructions for the hashing. Make sure to escape $ by $$.
